Fix top ad on narrow/small devices.
Reviewed-on: https://code.drupalcommerce.org/134
Tested-by: Jenkins <jenkins@commerceguys.com>

--- a/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default.css
+++ b/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default.css
@@ -191,6 +191,7 @@ body {
   font-weight: 700;
   padding: 5px 28px;
   text-transform: capitalize;
+  white-space: nowrap;
 }
 /* HP blocks: Slideshow */
 .block-demo-content-block-3 {
